Login now gives token
